# rtry

./: CLAUDE.md  Cargo.toml  README.md  install.bat  uninstall.bat
.claude/: settings.local.json
.claude/rules/: tsf-implementation.md
.claude/skills/research-similar-impl/: SKILL.md  references.md  report-template.md
crates/rtry-config/: Cargo.toml
crates/rtry-config/src/: main.rs
crates/rtry-core/: Cargo.toml
crates/rtry-core/src/: composer.rs  config.rs  engine.rs  history.rs  lib.rs  mazegaki.rs  table.rs
crates/rtry-tsf/: Cargo.toml
crates/rtry-tsf/src/: CLAUDE.md  candidate_window.rs  caret_rect.rs  class_factory.rs  composition.rs  edit_session.rs  function_provider.rs  ime_indicator.rs  key_handler.rs  language_bar.rs  lib.rs  register.rs  stroke_help.rs  text_service.rs
data/: mazegaki.dic  try.tbl
scripts/: merge_mazegaki.py
