[workspace]
members = ["crates/rtry-core", "crates/rtry-tsf", "crates/rtry-config"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_SystemServices",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Globalization",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_Shell",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }
windows-core = "0.62"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
